--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,11 @@
     }
   ],
   "require": {
-    "pear/Structures_Graph": "*"
+    "pear/Structures_Graph": "*",
+    "clue/graph": "~0.9.0",
+    "graphp/graphviz": "~0.2.0",
+    "graphp/algorithms": "~0.8.0",
+    "php-school/cli-menu": "^2.0"
   },
   "autoload": {
     "psr-4": {"Acme\\": "src/"}
