--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,9 @@
     "php-school/cli-menu": "^2.0"
   },
   "autoload": {
-    "psr-4": {"Acme\\": "src/"}
+    "psr-4": {
+      "Acme\\": "src/",
+      "Acme\\Planning\\": "src/planning"
+    }
   }
 }
